# dci-control-server

./: .git-blame-ignore-revs  .gitignore  .gitreview  .htaccess  .pylintrc  .zuul.yaml  Dockerfile  MANIFEST.in  README.md  README.rst  boa.sql  build_rpm.exp  build_rpm.sh  components.md  dci-control-server.spec  dci.spec  entrypoint.sh  groups  gunicorn.conf.py  init_db.py  local_settings.yml  play-dev.yaml  project.config  requirements.txt  requirements_container.txt  run_tests  runtestserver.py  setup.cfg  setup.py  start_db.sh  start_es.sh  submit_new_environment.py  t.py  test-requirements.txt  test_jenkins.py  tox.ini  wsgi.py
.openshift/: deploy_db
client/: __init__.py  dci_client.py  test_utils.py  utils.py
compose/: Dockerfile-API  Dockerfile-APP  Dockerfile-DB  Dockerfile-ES  Dockerfile-TOX  dci.yml
conf/: vhost.j2
db_schema/: dci-control-server-test.sql  dci-control-server.sql  refresh_schema.sh
dci/: app.py  audit.py  auth.py  auth_mechanism.py  dci_config.py  decorators.py  identity.py  policies.py  settings.py  wsgi.py
dci_client/: client.py
dci_databrowser/: __init__.py  config.json  gulpfile.js  package.json
dciauth/: signature.py  version.py
docs/: API.json  API.md  README.md  administration.md  signature_authentication.md
sample/: admin-cli.py  db_provisioning.py  elasticsearch-feeder.py  gerrit_review.conf  inject_version_result_in_jenkins.py  khaleesi-agent.py  khaleesi-init-db.sh  prepare_test_for_rdo_liberty.py  sample-scenario.json  sample.py  sample.sh  server-rdo.sh  sync-gerrit-review.py  tox-agent.py  tox-register-sha2.py
(+621 files in other folders)
