[metadata]
name = control-server
summary = Server which manage products deployments.
description-file =
    README.md
author = None
author-email = None
home-page = None
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    dci
